started on review system

--- a/BookOnShelfBlazor/Components/Account/Pages/Register.razor
+++ b/BookOnShelfBlazor/Components/Account/Pages/Register.razor
@@ -124,6 +124,11 @@
 
     public async Task RegisterUser(EditContext editContext)
     {
+        if(!editContext.Validate())
+        {
+            return;
+        }
+
         var user = CreateUser();
 
         await UserStore.SetUserNameAsync(user, Input.Email, CancellationToken.None);
