--- a/BookOnShelfBlazor/wwwroot/app.css
+++ b/BookOnShelfBlazor/wwwroot/app.css
@@ -339,8 +339,21 @@ h1:focus {
     flex: 1;
     margin-left: 25px;
     margin-right: 25px;
-    max-width: 90%;
+    max-width: 88%;
 }
 
 .Review{
+}
+
+.card-review {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    border-radius: 5px; /* 5px rounded corners */
+    margin: 10px;
+    padding: 10px;
+    width:98%
+}
+.ActionButtons{
+    display:flex;
+    flex-direction:column;
 }
