Added add and remove amounts of books available and made notification bar :D

--- a/BookOnShelfBlazor/Components/Layout/MainLayout.razor
+++ b/BookOnShelfBlazor/Components/Layout/MainLayout.razor
@@ -1,9 +1,8 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="page">
-
-    <main>
-        <div class="d-flex justify-content-center align-items-center border-2">
+    <main style="margin-top:7%;">
+        <div class="d-flex justify-content-center align-items-center border-2 fixed-top">
             <div class="col-12">
                 <NavMenu />
             </div>
