--- a/BookOnShelfBlazor/Components/Layout/NavMenu.razor
+++ b/BookOnShelfBlazor/Components/Layout/NavMenu.razor
@@ -3,7 +3,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation" >
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -37,10 +37,8 @@
                         </a>
                     </li>
                 </AuthorizeView>
-                <!-- Add a book icon -->
                 <AuthorizeView Roles="Admin">
                     <li class="nav-item mx-auto">
-                        <!-- Use mx-auto class to center -->
                         <a class="nav-link" href="/AddBook">
                             <i class="bi bi-file-plus custom-icon-size"></i>
                             <span>Add a book</span>
@@ -74,6 +72,12 @@
                         </a
                     </li>
                     <li class="nav-item">
+                    <button class="btn btn-link nav-link" onclick="toggleNotificationBar()">
+                        <i class="bi bi-bell custom-icon-size"></i>
+                        <span>Notifications</span>
+                    </button>
+                </li>
+                    <li class="nav-item">
                         <form action="Account/Logout" method="post">
                             <AntiforgeryToken />
                             <input type="hidden" name="ReturnUrl" value="#" />
@@ -89,3 +93,53 @@
     </div>
 </nav>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
+@*NOTIFICATIONBAR*@
+
+<style>
+    .notification-bar {
+      display: none;
+      position: fixed;
+      top: 15%;
+      right: 0;
+      height: 90%; 
+      width: 25%; 
+      background-color: #f8f9fa; 
+      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
+      z-index: 999; 
+      overflow-y: auto; 
+    }
+    
+    .notification-content {
+      padding: 20px;
+    }
+
+    .notification {
+      margin-bottom: 20px;
+      padding: 10px;
+      background-color: #fff;
+      border: 1px solid #ced4da;
+      border-radius: 4px;
+    }
+</style>
+
+
+<div class="container-fluid">
+  <div class="row">
+    <div class="col notification-bar">
+      <div class="notification-content">
+        <div class="notification">Notification 1</div>
+        <div class="notification">Notification 2</div>
+        <div class="notification">Notification 3</div>
+      </div>
+    </div>
+  </div>
+</div>
+
+ <script>
+    function toggleNotificationBar() {
+        $('.notification-bar').toggle();
+    }
+</script>
