--- a/BookOnShelfBlazor/Components/Pages/EditBook.razor
+++ b/BookOnShelfBlazor/Components/Pages/EditBook.razor
@@ -62,16 +62,12 @@
                                 <label for="Description" class="form-label">Description</label>
                             </div>
                             <div class="form-floating mb-3">
-                                <InputText @bind-Value="Book.ISBN" class="form-control custom-outline-color" placeholder="Author" maxlength="13" />
+                                <InputText @bind-Value="Book.ISBN" class="form-control custom-outline-color" placeholder="Author" maxlength="13" disabled />
                                 <label for="ISBN" class="form-label">ISBN</label>
                             </div>
                             <div class="form-floating mb-3">
                                 <InputNumber @bind-Value="Book.AmountOfPages" class="form-control custom-outline-color" placeholder="Year" />
                                 <label for="AmountOfPages" class="form-label">Amount of pages</label>
-                            </div>
-                            <div class="form-floating mb-3">
-                                <InputNumber @bind-Value="Book.AmountAvailable" class="form-control custom-outline-color" placeholder="Author" />
-                                <label for="AmountAvailable" class="form-label">Amount available</label>
                             </div>
                             <div class="row mb-3">
                                 <div class="col-md-6 d-flex align-items-center">
@@ -400,7 +396,7 @@
 
     private async Task EditBooks()
     {
-        if (Book.Title != null && Book.Description != null && Book.ISBN != null && Book.AmountOfPages != 0 && SelectedGenre != null && SelectedLanguage != null && SelectedWriters.Count > 0)
+        if (Book.Title != null && Book.Description != null && Book.ISBN != null && SelectedGenre != null && SelectedLanguage != null && SelectedWriters.Count > 0)
         {
             if (SelectedWriters.Count > 2)
             {
